# WARegistry

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy_docs.yml
cli/: Cargo.toml  build.rs
cli/src/: app.rs  main.rs
cli/src/app/: import.rs
docs/: book.toml  welcome.md
docs/architecture/: README.md
proto/: WARegistry.proto
registry/: Cargo.toml
registry/src/: main.rs  proto.rs  storage.rs
registry/src/proto/: waregistry.rs
registry/src/storage/: local_storage_provider.rs
